--- a/index.html
+++ b/index.html
@@ -114,3 +114,22 @@
     </ul>
   </div>
 
+<!-- Bootstrapin JS + JSON haku -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Haetaan JSON-data ulkoisesta palvelusta
+    fetch('https://jsonplaceholder.typicode.com/users')
+      .then(response => response.json())
+      .then(data => {
+        const list = document.getElementById('user-list');
+        
+        data.forEach(user => {
+          const li = document.createElement('li');
+          li.className = "list-group-item";
+          li.textContent = `${user.name} – ${user.email}`;
+          list.appendChild(li);
+        });
+      })
+      .catch(error => console.error('Virhe haussa:', error));
+  </script>
+</body>
